Refinement of v1/uploads endpoint #377
